<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.cadastro.CadastroActivity" android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="160dp"
            android:layout_height="117dp" app:srcCompat="@drawable/usuario" android:id="@+id/img_cadastro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_name"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/img_cadastro"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" android:textColorHint="#616161" android:inputType="textPersonName"
                android:id="@+id/etCadastrarNome"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email" android:textColorHint="#616161"
                android:inputType="textEmailAddress" android:id="@+id/etCadastrarEmail"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toTopOf="@+id/btnCadastrar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password" android:textColorHint="#616161"
                android:inputType="textPassword" android:id="@+id/etCadastrarPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/action_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnCadastrar"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>