<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ConfiguracoesActivity">

    <include android:layout_width="0dp" android:layout_height="wrap_content" layout="@layout/toobar"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:id="@+id/include"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_foto_membro_selecionado"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/padrao"
            app:civ_border_width="0dp"
            app:civ_border_color="#FFFFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingStart="16dp" android:paddingEnd="16dp"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto_membro_selecionado"
            app:layout_constraintBottom_toTopOf="@+id/tv_informe" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/username"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/et_person_name" android:minHeight="48dp" android:autofillHints="name"
                android:layout_weight="1"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_edit_24"
                android:id="@+id/iv_atualiza_nome" android:layout_gravity="center_vertical"
                android:contentDescription="@string/user_icon"/>
    </LinearLayout>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tv_informe"
            android:text="@string/informe" android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_photo_camera_24"
            android:id="@+id/btn_photo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery" app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/iv_foto_membro_selecionado"
            app:layout_constraintBottom_toBottomOf="@+id/iv_foto_membro_selecionado" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/camera" android:minHeight="48dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_insert_photo_24"
            android:id="@+id/btn_gallery"
            app:layout_constraintStart_toEndOf="@+id/btn_photo" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/iv_foto_membro_selecionado"
            app:layout_constraintBottom_toBottomOf="@+id/iv_foto_membro_selecionado" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/gallery" android:minHeight="48dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>