<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:orientation="vertical" android:paddingLeft="16dp"
              android:paddingRight="16dp" android:paddingTop="8dp" android:paddingBottom="8dp"
              android:gravity="center_vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:paddingBottom="3dp"
                  android:paddingTop="3dp">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_foto_membro_selecionado"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/padrao"
                app:civ_border_width="0dp"
                app:civ_border_color="#FFFFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/include"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:paddingEnd="4dp" android:paddingStart="4dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="clip_vertical" android:padding="5dp"
                android:gravity="clip_vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_membros_selecionado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/title"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" android:textStyle="bold"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_circle_notifications_24" android:id="@+id/iv_notification"
                        android:layout_weight="1" android:contentDescription="@string/notification"
                        android:visibility="gone"/>

            </LinearLayout>
            <TextView
                    android:id="@+id/textAdapterSubtitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="@string/message"
                    android:textColor="#696969"
                    android:textSize="14sp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/divisor"/>
</LinearLayout>
